--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ section {
 	margin:0;
 	padding:0;
 	/* background:url('images/wallpaper.jpeg')center ; */
-	background: linear-gradient(0deg, rgb(0, 177, 195) 0%, rgb(164, 212, 160) 80%);
+	background: linear-gradient(0deg, rgb(10, 82, 7) 0%, rgb(63, 57, 57) 80%);
 	width:100%;
 	height:103vh;
 }
@@ -93,7 +93,7 @@ section {
 section.sec2 {
 	height:auto;
 	padding-bottom: 120px;
-	background: #fff;
+	background: rgb(0, 0, 0);
 }
 
 
@@ -112,7 +112,7 @@ section.sec3 {
 section.sec4 {
 	height:100px;
 	padding-bottom: 120px;
-	background: #fff;
+	background: rgb(255, 255, 255);
 }
 
 #curve {
@@ -182,7 +182,7 @@ nav ul li a {
 
 nav ul li a:hover {
 	color:rgb(0, 177, 195);
-	background: #fff;
+	background: rgb(0, 0, 0);
 }
 
 #menu-list {
@@ -371,7 +371,7 @@ nav ul li a:hover {
 
 .toggle {
 	width:100%;
-	background-color: #fff;
+	background-color: rgb(0, 0, 0);
 	padding-top: 15px ;
 	padding-bottom: 15px ;
 	display: none;
@@ -430,7 +430,7 @@ nav ul li a:hover {
 	border-radius: 15px;
 	transform: translateY(-400%);
 	transition: transform 0.5s;
-	background: #fff;
+	background: rgb(255, 255, 255);
 }
 
 .header-detail {
@@ -451,7 +451,7 @@ nav ul li a:hover {
 }
 
 .header-detail a.tombol-close:hover {
- background:#fff;
+ background:rgb(255, 255, 255);
  padding : 5px 15px;
  color:rgb(0, 177, 195);
  box-sizing: content-box;
@@ -552,6 +552,7 @@ nav ul li a:hover {
 			top:30%;
 			left:8%;
 			width: 80%;
+			
 		}
 
 		section.sec3 {
